##Text encoding: utf-8

2009-02-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Makefile.am: do not install API docs.
	* libs/gccv/text.cc: do not end with unfinished cairo paths.

2009-01-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/bezier-arrow.cc: first implementation for bounds.
	* libs/gccv/text.cc: fixed run lentgh (must be in bytes, not chars).

2009-01-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: add new files.
	* libs/gccv/arrow.cc: set default values for arrow head shape.
	* libs/gccv/arrow.h: moved ArrowHead enum to structs.h.
	* libs/gccv/bezier-arrow.cc: new bezier cubic curve based arrows (not yet
	functional).
	* libs/gccv/bezier-arrow.h: ditto.
	* libs/gccv/structs.h: moved ArrowHead enum to structs.h.
	* libs/gccv/text.cc: some work on rich text.
	* libs/gcp/text.cc: set the default font description.

2009-01-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: one more double bond position fix.

2009-01-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add a cursor pixbuf.
	* libs/gcp/application.cc: add a cursors collection.
	* libs/gcp/application.h: ditto.
	* libs/gcp/tool.cc: implement Tool::OnMotion to enable context sensitive
	cursors.
	* libs/gcp/tool.h: ditto.
	* libs/gcp/view.cc: call Tool::OnMotion when appropriate.
	* plugins/paint/arrows/curvedarrowtool.cc: Implement OnMotion.
	* plugins/paint/arrows/curvedarrowtool.h: ditto.
	* plugins/paint/arrows/plugin.cc: Activate curved arrow tools.

2009-01-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/text.cc: implement very basic text edition.
	* libs/gccv/text.h: ditto.
	* libs/gcp/text.cc: use gccv::Anchor.
	* plugins/paint/text/texttool.cc: call gccv::Text::OnKeyPressed when
	appropriate.

2009-01-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* AUTHORS: added the brasilian translator.
	* *.h, *.c, *.cc: fixed FSF address.
